add visitor counter

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
             </div>
         </div>
     </div>
+    
+    //Visitor Counter
+    <div id="sfck58qnar5d64pkggxcd57yw9sht5qstdg"></div><script type="text/javascript" src="https://counter3.stat.ovh/private/counter.js?c=k58qnar5d64pkggxcd57yw9sht5qstdg&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="free website counter"><img src="https://counter3.stat.ovh/private/freecounterstat.php?c=k58qnar5d64pkggxcd57yw9sht5qstdg" border="0" title="free website counter" alt="free website counter"></a></noscript>
     <footer class="footer">
         <div class="row" style="color: black; padding: 10px;">
             <div class="col-sm-6">
