--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center" style="padding-bottom: 30px">
             <div class="card text-white mb-3" style="max-width: 18rem; min-width: 10rem" id="totalBox">
                 <div class="card-header"><b>Net Profit/Loss (RM)</b></div>
                 <div class="card-body">
@@ -142,7 +142,6 @@
         </div>
     </div>
     
-    <div id="sfck58qnar5d64pkggxcd57yw9sht5qstdg"></div><script type="text/javascript" src="https://counter3.stat.ovh/private/counter.js?c=k58qnar5d64pkggxcd57yw9sht5qstdg&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="free website counter"><img src="https://counter3.stat.ovh/private/freecounterstat.php?c=k58qnar5d64pkggxcd57yw9sht5qstdg" border="0" title="free website counter" alt="free website counter"></a></noscript>
     <footer class="footer">
         <div class="row" style="color: black; padding: 10px;">
             <div class="col-sm-6">
